<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_ros_practice</name>
  <version>1.0.0</version>
  <description>
    A practical repository for understanding the collaborative functions of Choreonoid and ROS.
  </description>

  <maintainer email="todo@todo.todo">irl-14</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros</depend>
  <depend>choreonoid_joy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
